[package]
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Mocking suite for Iron requests."
documentation = "https://docs.rs/iron-test"
license = "MIT"
name = "iron-test"
repository = "https://github.com/reem/iron-test"
version = "0.6.0"

[dependencies]
hyper = "0.10"
iron = { git = "https://github.com/static-web-server/iron.git", branch = "master" }
log = "0.3"
url = "1.6"

[dependencies.uuid]
features = ["v4"]
version = "0.5.1"

[dev-dependencies]
mime = "0.3"
router = "0.6"
urlencoded = "0.6"
